--- a/department-service.properties
+++ b/department-service.properties
@@ -14,4 +14,4 @@ spring.application.name=DEPARTMENT-SERVICE
 eureka.instance.client.serverurl.defaultZone=http://localhost:8761/eureka/
 
 
-
+spring.boot.message=Hello Department service
