--- a/employee-service.properties
+++ b/employee-service.properties
@@ -14,4 +14,4 @@ server.port=8081
 spring.application.name=EMPLOYEE-SERVICE
 #here we are configuring eureka server url in department service
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-spring.boot.message=Hello employee service,how is health
+spring.boot.message=Hello employee service
