--- a/department-service.properties
+++ b/department-service.properties
@@ -15,3 +15,7 @@ eureka.instance.client.serverurl.defaultZone=http://localhost:8761/eureka/
 
 
 spring.boot.message=Hello Department service
+#configration of distributed tracing 
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
