--- a/employee-service.properties
+++ b/employee-service.properties
@@ -14,4 +14,11 @@ server.port=8081
 spring.application.name=EMPLOYEE-SERVICE
 #here we are configuring eureka server url in department service
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+
 spring.boot.message=Hello employee service
+
+#config file of distributed tracing 
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
