--- a/employee-service.properties
+++ b/employee-service.properties
@@ -16,7 +16,7 @@ spring.application.name=EMPLOYEE-SERVICE
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 
 
-spring.boot.message=Hello employee service
+spring.boot.message=Hello employee 
 
 #config file of distributed tracing 
 management.tracing.sampling.probability=1.0 
