Update employee-service.properties circuit breaker

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -22,3 +22,13 @@ spring.boot.message=Hello employee
 management.tracing.sampling.probability=1.0 
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.level.org.springframework.web=DEBUG
+
+
+#Actutaor endpoints for circuit breaker
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+#circuit breaker config
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.register-health-indicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failure-rate-threshold=50
