Update employee-service.properties circuit breaker

--- a/employee-service.properties
+++ b/employee-service.properties
@@ -23,7 +23,6 @@ management.tracing.sampling.probability=1.0
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.level.org.springframework.web=DEBUG
 
-
 #Actutaor endpoints for circuit breaker
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=health
@@ -32,3 +31,9 @@ management.endpoint.health.show-details=always
 #circuit breaker config
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.register-health-indicator=true
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-size=10
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE..sliding-window-type=COUNT_BASED
