--- a/employee-service.properties
+++ b/employee-service.properties
@@ -36,4 +36,4 @@ resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automatic-transition-from
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.wait-duration-in-open-state=5s
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-size=10
-resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE..sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-type=COUNT_BASED
