--- a/organization-service.properties
+++ b/organization-service.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8083
 
+spring.boot.message=Hello employee
 
 #here we are configuring eureka server url in department service
 eureka.instance.client.serverurl.defaultZone=http://localhost:8761/eureka/
