--- a/organization-service.properties
+++ b/organization-service.properties
@@ -13,3 +13,8 @@ spring.boot.message=Hello organization
 
 #here we are configuring eureka server url in department service
 eureka.instance.client.serverurl.defaultZone=http://localhost:8761/eureka/
+
+#configration of distributed tracing 
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
